--- a/jobdelas/src/main/resources/templates/index.html
+++ b/jobdelas/src/main/resources/templates/index.html
@@ -16,13 +16,13 @@
       crossorigin="anonymous"
     />
     <link rel="stylesheet" href="/css/header.css" />
-
+    <link rel="stylesheet" href="/css/styles.css" />
     <link rel="stylesheet" href="/css/index.css" />
 
     <title>JobDelas</title>
   </head>
   <body>
-    <header th:replace="~{fragments/_header :: header}"></header>
+    <header class="header"></header>
     <main>
       <section class="container_principal">
         <section class="lateral_home">
@@ -362,7 +362,7 @@
         </div>
       </div>
     </main>
-
+    <script src="/js/index.js" type="module"></script>
     <script
       src="https://code.jquery.com/jquery-3.2.1.slim.min.js"
       integrity="sha384-KJ3o2DKtIkvYIK3UENzmM7KCkRr/rE9/Qpg6aAZGJwFDMVNA/GpGFF93hXpG5KkN"
