--- a/jobdelas/src/main/resources/static/css/header.css
+++ b/jobdelas/src/main/resources/static/css/header.css
@@ -1,52 +1,50 @@
-* {
-    padding: 0;
-    list-style: none;
-    margin: 0;
 
-}
+
 .header {
     display: flex;
     justify-content: space-between;
-    padding: 15px 40px;
+    padding: 15px 40px !important;
     background-color: #ffffff;
     align-items: center;
 }
 
-.header img {
-    height: 35px;
-}
-
-
-.nav ul{
-    display: flex;
-    justify-content: space-around;
+.header .nav ul{
+    margin-bottom: 0 !important;
+    display: flex !important;
+    justify-content: space-around !important;
     align-content: baseline !important;
     align-items: baseline !important;
-}
-
-.nav ul {
-    gap:5px;
+    gap:5px !important;
 }
 
 
-.nav div {
+
+.header .nav div {
     align-items: center;
     display: flex;
     flex-direction: column;
 }
 
 
-.nav ul li a, ul li nav i {
-    color:#B378FF;
-    text-decoration: none;
 
-}
+
 
 .caixa-item-navbar {
     width: 70px !important;
     padding-top: 5px;
     border: 1px solid white !important;
     background-color: #fff;
+
+}
+
+.icone_nav , .caixa-item-navbar a{
+    color:#B378FF;
+    text-decoration: none;
+    padding: 0 !important;
+
+}
+.icone_nav {
+    font-size: 20px !important;
 
 }
 
@@ -58,28 +56,26 @@
 
 
 .search_bar {
-    display: flex;
+    display: flex !important;
     align-content: center !important;
     align-items: center !important;
-    gap: 5px;
+    gap: 5px !important;
 }
 
-.search_bar input {
-    border-radius: 10px;
-    padding: 10px 14px;
-    border: 2px solid #B378FF;
+.pesquisar_header {
+    border-radius: 10px  !important;
+    border: 2px solid #B378FF !important;
+    padding: 12px 20px !important;
 }
 
 .search_bar i {
-    font-size: 26px;
+    font-size: 26px !important;
     color: #B378FF;
 
 }
 
-
-
 .botao-perfil {
-    border: none;
+    border: none !important;
     background-color: #fff !important;
     cursor: pointer;
 }
@@ -92,11 +88,15 @@
     background-color: #fff !important;
 }
 
+.logo_jobdelas {
+    height: 50px !important;
+}
+
 .img_perfil {
     background-color: #fff;
-
-    border: none; 
+    border: none !important; 
     border-radius: 50%;
+    height: 50px !important;
 }
 
 @media only screen and (max-width: 896px) {
