--- a/jobdelas/src/main/resources/static/css/index.css
+++ b/jobdelas/src/main/resources/static/css/index.css
@@ -329,3 +329,19 @@ button:hover {
   border: none !important;
 }
 
+
+.lateral_home {
+  width: 20%; /* Definir uma largura fixa para a lateral_home */
+  background-color: white;
+  border-radius: 15px;
+  padding: 10px;
+}
+
+
+@media only screen and (max-width: 896px) {
+  .lateral_home {
+    display: none;
+  }
+  
+
+}
