--- a/jobdelas/src/main/resources/templates/aprendizado/cursos.html
+++ b/jobdelas/src/main/resources/templates/aprendizado/cursos.html
@@ -21,7 +21,7 @@
   <body>
     <header class="header"></header>
     <main>
-      <section>
+      <section class="container-principal">
         <div class="container-aprendizado">
           <i class="fas fa-graduation-cap icone-aprendizado"></i>
           <h1>Seu Ambiente de Aprendizagem</h1>
