--- a/jobdelas/src/main/resources/static/css/cursos.css
+++ b/jobdelas/src/main/resources/static/css/cursos.css
@@ -8,7 +8,7 @@ body {
 }
 
 
-section {
+.container-principal {
     display: flex;
     margin:60px 40px;
     text-align: center;
@@ -19,6 +19,7 @@ section {
 
 .container-cursos {
     display: flex;
+    flex-wrap: wrap;
     gap: 20px;
     margin-top: 20px;
 }
@@ -127,8 +128,8 @@ section {
     align-items: center;
     justify-content: space-around;
     background-color: rgb(255, 255, 255);
-    height: 70px;
-    width: 80px;
+    height: 80px;
+    width: 90px;
     padding: 10px;
     text-align: center;
     border-radius: 20px;
@@ -150,4 +151,35 @@ section {
     margin-top: 10px;
     color:  #B378FF;
     font-weight: 600;
+}
+
+
+@media only screen and (max-width: 896px) {
+  .container-cursos {
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: center;
+  align-items: center;
+}
+.card-curso {
+  width: 100%;
+  height: 200px;
+}
+.icone-aprendizado {
+  font-size: 1.6rem;
+}
+
+.elemento p {
+  font-size: 15px;
+}
+
+}
+
+
+@media only screen and (max-width: 650px) {
+
+.container-principal {
+  margin: 20px 15px ;
+
+}
 }
