--- a/jobdelas/src/main/resources/static/css/index.css
+++ b/jobdelas/src/main/resources/static/css/index.css
@@ -157,12 +157,12 @@ button:hover {
     color: #ffffff;
     font-weight: 600;
     font-size: 1.2rem;
-    padding: 8px 40px;
     border: 1px solid transparent;
     border-radius: 10px;
     cursor: pointer;
   }
 
+ 
   .btn-primary:hover {
     background: linear-gradient(to bottom, #B378FF 75%, #ffffff00 25%) !important;
     border: 1px solid #B378FF;
@@ -329,3 +329,17 @@ button:hover {
   border: none !important;
 }
 
+.btn-close:hover {
+  color: #fff;
+}
+
+.close {
+  margin: 0 !important;
+  border: none !important;
+  color: #fff;
+  
+}
+
+.close:hover {
+  color: #fff;
+}
