--- a/jobdelas/src/main/resources/static/css/header.css
+++ b/jobdelas/src/main/resources/static/css/header.css
@@ -1,5 +1,3 @@
-
-
 .header {
     max-width: 100%;
     display: flex;
@@ -9,13 +7,13 @@
     align-items: center;
 }
 
-.header .nav ul{
+.header .nav ul {
     margin-bottom: 0 !important;
     display: flex !important;
     justify-content: space-around !important;
     align-content: baseline !important;
     align-items: baseline !important;
-    gap:5px !important;
+    gap: 5px !important;
 }
 
 
@@ -38,13 +36,15 @@
 
 }
 
-.icone_nav , .caixa-item-navbar a{
-    color:#B378FF;
+.icone_nav,
+.caixa-item-navbar a {
+    color: #B378FF;
     text-decoration: none;
     padding: 0 !important;
     font-weight: 600;
 
 }
+
 .icone_nav {
     font-size: 20px !important;
 
@@ -65,13 +65,13 @@
 }
 
 .pesquisar_header {
-    border-radius: 10px  !important;
+    border-radius: 10px !important;
     border: 2px solid #B378FF !important;
-    padding: 12px 20px ;
+    padding: 12px 20px;
 }
 
 .search_bar i {
-    font-size: 26px ;
+    font-size: 26px;
     color: #B378FF;
 
 }
@@ -95,7 +95,7 @@
 
 .img_perfil {
     background-color: #fff;
-    border: none !important; 
+    border: none !important;
     border-radius: 50%;
     height: 50px;
 }
@@ -105,23 +105,24 @@
     .logo_jobdelas {
         height: 30px;
     }
-    
-    }
+
+}
 
 
 @media only screen and (max-width: 840px) {
     .logo_jobdelas {
         display: none;
     }
+
     .search_bar i {
-        font-size:19px  !important ;
-    
+        font-size: 19px !important;
+
     }
 
     .pesquisar_header {
-        padding: 5px  !important;
+        padding: 5px !important;
     }
-    
+
     .img_perfil {
         height: 40px;
     }
@@ -129,10 +130,10 @@
 }
 
 @media only screen and (max-width: 650px) {
-.header {
-    padding: 20px 15px ;
+    .header {
+        padding: 20px 15px;
 
-}
+    }
 
 }
 
@@ -141,5 +142,5 @@
         display: none;
 
     }
-    
-    }
+
+}
