--- a/jobdelas/src/main/resources/templates/index.html
+++ b/jobdelas/src/main/resources/templates/index.html
@@ -280,7 +280,7 @@
 
       <div class="modal" id="editarModal">
         <div class="modal-dialog">
-          <div class="modal-content"></div>
+          <div class="teste modal-content"></div>
         </div>
       </div>
     </main>
