--- a/jobdelas/src/main/resources/templates/aprendizado/curso.html
+++ b/jobdelas/src/main/resources/templates/aprendizado/curso.html
@@ -7,34 +7,36 @@
       content="width=device-width, initial-scale=1, shrink-to-fit=no"
     />
     <title>Ambiente de Aprendizagem</title>
-    <!-- Adicione seus links para CSS e outras dependências aqui -->
-    <link rel="stylesheet" href="estilos.css" />
-    <!-- Adicione os links para Bootstrap -->
+    <link
+      rel="stylesheet"
+      href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.18.0/font/bootstrap-icons.css"
+      integrity="sha384-rI2DBIG3Fv2jRwe7z9tc3R8pWFM9gGQVoTo5hcc4M2jtEkhl1ykI78zY3hY5FGEW"
+      crossorigin="anonymous"
+    />
     <link
       rel="stylesheet"
       href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css"
+      integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm"
+      crossorigin="anonymous"
     />
-    <script src="https://code.jquery.com/jquery-3.2.1.slim.min.js"></script>
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.12.9/umd/popper.min.js"></script>
-    <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/js/bootstrap.min.js"></script>
+    <link rel="stylesheet" href="/css/header.css" />
+    <link rel="stylesheet" href="/css/styles.css" />
+    <link rel="stylesheet" href="/css/curso.css" />
   </head>
   <body>
-    <div class="container">
-      <!-- Coluna 1: Ambiente de Aprendizagem e Cards de Curso -->
-      <div class="coluna">
-        <h2>Seu Ambiente de Aprendizagem</h2>
-
-        <!-- Título do Curso -->
-        <h3>Título do Curso</h3>
-
-        <!-- Card do Curso -->
-        <div class="card-curso">
-          <p>Descrição do Curso</p>
+    <header class="header"></header>
+    <main>
+      <section class="container-principal">
+        <div class="container-aprendizado">
+          <i class="fas fa-graduation-cap icone-aprendizado"></i>
+          <h1 class="titulo_curso">TITULO CURSO</h1>
+          <p>Descrição Curso</p>
         </div>
-
         <ul class="lista-aulas">
           <li class="aula">
-            <div class="titulo">Título da Aula 1</div>
+            <div class="titulo">
+              <i class="fas fa-play-circle"></i> Título da Aula 1
+            </div>
             <button
               class="btn-assistir"
               data-toggle="modal"
@@ -43,10 +45,10 @@
               Assistir Aula
             </button>
           </li>
-
-          <!-- Aula 2 -->
           <li class="aula">
-            <div class="titulo">Título da Aula 2</div>
+            <div class="titulo">
+              <i class="fas fa-play-circle"></i> Título da Aula 2
+            </div>
             <button
               class="btn-assistir"
               data-toggle="modal"
@@ -55,14 +57,10 @@
               Assistir Aula
             </button>
           </li>
-
-          <!-- Adicione mais aulas conforme necessário -->
         </ul>
-      </div>
-    </div>
+      </section>
+    </main>
 
-    <!-- Modais para Aulas -->
-    <!-- Aula 1 -->
     <div
       class="modal fade"
       id="aulaModal1"
@@ -126,5 +124,26 @@
         </div>
       </div>
     </div>
+
+    <script src="/js/index.js" type="module"></script>
+    <script
+      src="https://code.jquery.com/jquery-3.2.1.slim.min.js"
+      integrity="sha384-KJ3o2DKtIkvYIK3UENzmM7KCkRr/rE9/Qpg6aAZGJwFDMVNA/GpGFF93hXpG5KkN"
+      crossorigin="anonymous"
+    ></script>
+    <script
+      src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.12.9/umd/popper.min.js"
+      integrity="sha384-ApNbgh9B+Y1QKtv3Rn7W3mgPxhU9K/ScQsAP7hUibX39j7fakFPskvXusvfa0b4Q"
+      crossorigin="anonymous"
+    ></script>
+    <script
+      src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/js/bootstrap.min.js"
+      integrity="sha384-JZR6Spejh4U02d8jOt6vLEHfe/JQGiRRSQQxSfFWpi1MquVdAyjUar5+76PVCmYl"
+      crossorigin="anonymous"
+    ></script>
+    <script
+      src="https://kit.fontawesome.com/cda1aa7b4f.js"
+      crossorigin="anonymous"
+    ></script>
   </body>
 </html>
