--- a/jobdelas/src/main/resources/static/css/styles.css
+++ b/jobdelas/src/main/resources/static/css/styles.css
@@ -15,4 +15,16 @@ body {
 
 }
 
+.form-group label {
+    color: #B378FF;
+    font-weight: bold;
+}
+
+.form-control {
+    border: 1px solid #B378FF;
+    border-radius: 5px;
+    padding: 10px;
+    width: 100%;
+    box-sizing: border-box;
+}
 
