--- a/jobdelas/src/main/resources/static/css/post.css
+++ b/jobdelas/src/main/resources/static/css/post.css
@@ -11,7 +11,7 @@
     gap: 10px;
 }
 
-.user-info img {
+.user-info .foto_criarpostagem {
     height: 40px;
     width: 40px;
     border-radius: 50%;
