--- a/jobdelas/src/main/resources/static/css/styles.css
+++ b/jobdelas/src/main/resources/static/css/styles.css
@@ -7,12 +7,14 @@
     padding: 0;
     list-style: none;
     overflow-x: hidden;
-
 }
 
 body {
-    background-color: #B378FF;
+    background-color: #c192ff;
+}
 
+main {
+    padding: 40px 30px;
 }
 
 .form-group label {
@@ -21,7 +23,7 @@ body {
 }
 
 .form-control {
-    border: 1px solid #B378FF;
+    border: none;
     border-radius: 5px;
     padding: 10px;
     width: 100%;
