--- a/jobdelas/src/main/resources/templates/aprendizado/cursos.html
+++ b/jobdelas/src/main/resources/templates/aprendizado/cursos.html
@@ -9,13 +9,19 @@
     <title>Ambiente de Aprendizagem</title>
     <link
       rel="stylesheet"
-      href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.1/css/all.min.css"
-      integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj"
+      href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.18.0/font/bootstrap-icons.css"
+      integrity="sha384-rI2DBIG3Fv2jRwe7z9tc3R8pWFM9gGQVoTo5hcc4M2jtEkhl1ykI78zY3hY5FGEW"
       crossorigin="anonymous"
     />
-    <link rel="stylesheet" href="/css/header.css" />
+    <link
+      rel="stylesheet"
+      href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css"
+      integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm"
+      crossorigin="anonymous"
+    />
     <link rel="stylesheet" href="/css/styles.css" />
-
+    <link rel="stylesheet" href="/css/header.css" />
+    <link rel="stylesheet" href="/css/card_infoaprendizado.css" />
     <link rel="stylesheet" href="/css/cursos.css" />
   </head>
 
@@ -23,24 +29,7 @@
     <header class="header"></header>
     <main>
       <section class="container-principal">
-        <div class="container-aprendizado">
-          <i class="fas fa-graduation-cap icone-aprendizado"></i>
-          <h1>Seu Ambiente de Aprendizagem</h1>
-          <ul class="elementos-adicionais">
-            <li class="elemento">
-              <i class="fas fa-lightbulb"></i>
-              <p>Tecnologia</p>
-            </li>
-            <li class="elemento">
-              <i class="fas fa-chalkboard-teacher"></i>
-              <p>Liberdade</p>
-            </li>
-            <li class="elemento">
-              <i class="fas fa-brain"></i>
-              <p>Confiança</p>
-            </li>
-          </ul>
-        </div>
+        <div class="container-aprendizado"></div>
 
         <div class="container-cursos">
           <div class="card-curso">
@@ -64,7 +53,13 @@
       </section>
     </main>
 
-    <script src="/js/index.js" type="module"></script>
+    <script src="/js/cursos.js" type="module"></script>
+
+    <script
+      src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/js/bootstrap.min.js"
+      integrity="sha384-JZR6Spejh4U02d8jOt6vLEHfe/JQGiRRSQQxSfFWpi1MquVdAyjUar5+76PVCmYl"
+      crossorigin="anonymous"
+    ></script>
     <script
       src="https://kit.fontawesome.com/cda1aa7b4f.js"
       crossorigin="anonymous"
