--- a/jobdelas/src/main/resources/templates/aprendizado/cursos.html
+++ b/jobdelas/src/main/resources/templates/aprendizado/cursos.html
@@ -31,25 +31,7 @@
       <section class="container-principal">
         <div class="container-aprendizado"></div>
 
-        <div class="container-cursos">
-          <div class="card-curso">
-            <h3><i class="fas fa-graduation-cap"></i> Título do Curso 1</h3>
-            <p><i class="fas fa-book"></i> Matéria: Nome da Matéria</p>
-            <p><i class="far fa-clock"></i> Duração: X horas</p>
-            <button>
-              <i class="fas fa-play"></i> <a href="/curso">Learn </a>
-            </button>
-          </div>
-
-          <div class="card-curso">
-            <h3><i class="fas fa-graduation-cap"></i> Título do Curso 2</h3>
-            <p><i class="fas fa-book"></i> Matéria: Nome da Matéria</p>
-            <p><i class="far fa-clock"></i> Duração: X horas</p>
-            <button>
-              <i class="fas fa-play"></i> <a href="/curso">Learn </a>
-            </button>
-          </div>
-        </div>
+        <div class="container-cursos"></div>
       </section>
     </main>
 
